--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -1,9 +1,8 @@
 <idea-plugin version="2">
 	<name>Tmux</name>
 	<description>
-		Plugin that provides tmux integration with IntelliJ. First pass will be the ability to send data to a specific
-		Tmux panel, which can allow for
-		REPL integration with IntelliJ
+		Plugin that provides Tmux integration with IntelliJ. First pass will be the ability to send data to a specific
+		Tmux panel, which can allow for REPL integration with IntelliJ
 	</description>
 	<version>1.0</version>
 	<vendor>Mark Mandel</vendor>
@@ -37,11 +36,14 @@
 
 
 			<action id="com.compoundtheory.intellij.tmux.SendSelectedTextAction"
-					class="com.compoundtheory.intellij.tmux.SendSelectedTextAction" text="Send Selected Text"
+					class="com.compoundtheory.intellij.tmux.SendSelectedTextAction" text="Send Selected To Tmux"
 					description="Sends the selected text to the selected Tmux Pane">
 				<keyboard-shortcut keymap="$default" first-keystroke="ctrl B" second-keystroke="V"/>
+
+				<add-to-group group-id="EditorPopupMenu" anchor="last" />
 			</action>
 		</group>
+
 
 	</actions>
 
