We have a form for selecting the tmux binary. Now to just save it n' stuff.

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -78,5 +78,6 @@
 
 	<extensions defaultExtensionNs="com.intellij">
 		<!-- Add your extensions here -->
+		<applicationConfigurable implementation="com.compoundtheory.intellij.tmux.config.AppConfigurable" />
 	</extensions>
 </idea-plugin>
