--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -18,7 +18,9 @@
 	<name>Tmux</name>
 	<description>
 		Plugin that provides Tmux integration with IntelliJ. First pass will be the ability to send data to a specific
-		Tmux panel, which can allow for REPL integration with IntelliJ
+		Tmux panel, which can allow for REPL integration with IntelliJ.
+
+		Further details can be found at: https://github.com/markmandel/tmux-intellij
 	</description>
 	<version>0.2</version>
 	<vendor>Mark Mandel</vendor>
