--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -83,6 +83,8 @@
 		<applicationConfigurable instance="com.compoundtheory.intellij.tmux.config.AppConfigurable"></applicationConfigurable>
 		<applicationService serviceImplementation="com.compoundtheory.intellij.tmux.config.TmuxAppSettings" serviceInterface="com.compoundtheory.intellij.tmux.config.TmuxAppSettings" />
 
+		<projectConfigurable instance="com.compoundtheory.intellij.tmux.config.ProjConfigurable"></projectConfigurable>
+
 	</extensions>
 
 
