--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -22,8 +22,8 @@
 
 		Further details can be found at: https://github.com/markmandel/tmux-intellij
 	</description>
-	<version>0.2</version>
-	<vendor>Mark Mandel</vendor>
+	<version>0.3</version>
+	<vendor url="http://www.compoundtheory.com">Mark Mandel</vendor>
 
 	<!-- please see http://confluence.jetbrains.net/display/IDEADEV/Build+Number+Ranges for description -->
 	<idea-version since-build="107.105"/>
